#ifndef GAMETYPE_H
#define GAMETYPE_H

enum class GameType { RivalIsAHuman, RivalIsACPU };

#endif // GAMETYPE_H
