#ifndef PATHMAPMARKER_H
#define PATHMAPMARKER_H

enum class PathMapMarker {
    Nothing,
    Destination,
    Victim
};

#endif // PATHMAPMARKER_H
